[gd_scene load_steps=12 format=3 uid="uid://dll1vlewnfnsp"]

[ext_resource type="PackedScene" uid="uid://cu0o4eb3s188x" path="res://scenes/characters/enemy_template.tscn" id="1_eblst"]
[ext_resource type="Script" uid="uid://b58i4sikmtuxc" path="res://horokko.gd" id="2_cuc7k"]
[ext_resource type="Texture2D" uid="uid://cclcq2tbbrk5u" path="res://assets/textures/horokko_ph.png" id="3_rllx5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_107v4"]
height = 0.25
radius = 0.15

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aw5vn"]
albedo_texture = ExtResource("3_rllx5")

[sub_resource type="CylinderMesh" id="CylinderMesh_xoxcu"]
top_radius = 0.15
bottom_radius = 0.15
height = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7772k"]
radius = 4.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xkim6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lp3ob"]
radius = 2.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_5i6h2"]
points = PackedVector3Array(0, -1, 0, 0, 1, 0, -4, -1, -8, -4, 1, -8, 4, -1, -8, 4, 1, -8)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_eblst"]
height = 0.25
radius = 0.155

[node name="Horokko" instance=ExtResource("1_eblst")]
script = ExtResource("2_cuc7k")

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("CylinderShape3D_107v4")

[node name="MeshInstance3D" parent="." index="1"]
material_override = SubResource("StandardMaterial3D_aw5vn")
mesh = SubResource("CylinderMesh_xoxcu")

[node name="Ahead" type="Node3D" parent="MeshInstance3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Range" type="Area3D" parent="." index="2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Range" index="0"]
shape = SubResource("CylinderShape3D_7772k")

[node name="Attack" type="Area3D" parent="." index="3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack" index="0"]
shape = SubResource("CylinderShape3D_xkim6")

[node name="Bomb" type="Area3D" parent="." index="4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bomb" index="0"]
shape = SubResource("CylinderShape3D_lp3ob")

[node name="Sight" type="Area3D" parent="." index="5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sight" index="0"]
shape = SubResource("ConvexPolygonShape3D_5i6h2")

[node name="Damage" type="Area3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.12527356, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damage" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12522833, 0)
shape = SubResource("CylinderShape3D_eblst")

[node name="RayCast3D" type="RayCast3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, 0)
collision_mask = 2
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 4

[node name="Bomb_time" type="Timer" parent="." index="8"]
wait_time = 8.0
autostart = true

[node name="Stop_time" type="Timer" parent="." index="9"]
wait_time = 2.0
one_shot = true

[node name="Attack_time" type="Timer" parent="." index="10"]
wait_time = 0.6
one_shot = true

[node name="Chase_time" type="Timer" parent="." index="11"]
wait_time = 0.8

[node name="KB" type="Timer" parent="." index="12"]
wait_time = 0.2
one_shot = true

[node name="Bombs" type="Node3D" parent="." index="13"]

[node name="Wall Ray" type="RayCast3D" parent="." index="14"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
target_position = Vector3(0, -0.5, 0)

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_attack_body_exited"]
[connection signal="body_entered" from="Bomb" to="." method="_on_bomb_body_entered"]
[connection signal="body_exited" from="Bomb" to="." method="_on_bomb_body_exited"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_sight_body_exited"]
[connection signal="body_entered" from="Damage" to="." method="_on_damage_body_entered"]
[connection signal="timeout" from="Bomb_time" to="." method="_on_bomb_time_timeout"]
[connection signal="timeout" from="Stop_time" to="." method="_on_stop_time_timeout"]
[connection signal="timeout" from="Attack_time" to="." method="_on_attack_time_timeout"]
[connection signal="timeout" from="Chase_time" to="." method="_on_chase_time_timeout"]
